--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>io.github.brandonjmitchell</groupId>
 	<artifactId>amblur</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>StAX parser that uses XPaths.</description>
 	<url>https://github.com/BrandonJMitchell/amblur</url>
