--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-logging.level.root=ERROR
 spring.main.web-application-type=NONE
+#logging.level.root=DEBUG
+logging.level.org.sovereign.technology.amblur=ERROR
