--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.github.brandonjmitchell</groupId>
 	<artifactId>amblur</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>StAX parser that uses XPaths.</description>
 	<url>https://github.com/BrandonJMitchell/amblur</url>
@@ -28,7 +27,7 @@
 		<connection>scm:git:git://github.com/BrandonJMitchell/amblur.git</connection>
 		<developerConnection>scm:git:git@github.com:BrandonJMitchell/amblur.git</developerConnection>
 		<url>https://github.com/BrandonJMitchell/amblur</url>
-		<tag>amblur-1.0.0</tag>
+		<tag>amblur-1.0.2</tag>
 	</scm>
 
 	<distributionManagement>
