--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,2 @@
 spring.main.web-application-type=NONE
-logging.level.org.sovereign.technology.amblur=ERROR
+logging.level.org.sovereign.technology.amblur=INFO
