Split EndEventHandler into smaller methods. Added two new variables subMapper and action in the ParserRule and RulePlan to help support html parsing. Created test cases.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,2 @@
 spring.main.web-application-type=NONE
-logging.level.org.sovereign.technology.amblur=INFO
+logging.level.org.sovereign.technology.amblur=TRACE
